--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   expansion_tile_card: ^3.0.0
   flutter_staggered_grid_view: ^0.7.0
+  skeleton_text: ^3.0.1
 
 dev_dependencies:
   flutter_test:
