--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   expansion_tile_card: ^3.0.0
   flutter_staggered_grid_view: ^0.7.0
   skeleton_text: ^3.0.1
+  flutter_lazy_loader: ^1.0.3
+  lazy_load_scrollview: ^1.3.0
 
 dev_dependencies:
   flutter_test:
