--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   skeleton_text: ^3.0.1
   flutter_lazy_loader: ^1.0.3
   lazy_load_scrollview: ^1.3.0
+  lottie: ^3.1.2
 
 dev_dependencies:
   flutter_test:
