--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_lazy_loader: ^1.0.3
   lazy_load_scrollview: ^1.3.0
   lottie: ^3.1.2
+  url_launcher: ^6.2.6
 
 dev_dependencies:
   flutter_test:
