--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   lazy_load_scrollview: ^1.3.0
   lottie: ^3.1.2
   url_launcher: ^6.2.6
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
