--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   lottie: ^3.1.2
   url_launcher: ^6.2.6
   image_picker: ^1.1.2
+  dio: ^5.4.3+1
 
 dev_dependencies:
   flutter_test:
